--- a/admin/FIREBASE_REALTIME_DATABASE_RULES.json
+++ b/admin/FIREBASE_REALTIME_DATABASE_RULES.json
@@ -30,6 +30,10 @@
     "systemLogs": {
       ".read": "auth != null && root.child('admins').child(auth.uid).exists()",
       ".write": "auth != null && root.child('admins').child(auth.uid).exists()"
+    },
+    "rankings": {
+      ".read": "auth != null",
+      ".write": "auth != null && root.child('admins').child(auth.uid).exists()"
     }
   }
 }
