--- a/admin/FIREBASE_REALTIME_DATABASE_RULES.json
+++ b/admin/FIREBASE_REALTIME_DATABASE_RULES.json
@@ -33,7 +33,8 @@
     },
     "rankings": {
       ".read": "auth != null",
-      ".write": "auth != null && root.child('admins').child(auth.uid).exists()"
+      ".write": "auth != null && root.child('admins').child(auth.uid).exists()",
+      ".indexOn": "points"
     }
   }
 }
